@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <scraper framework="1.1" date="2010-10-11">
 	<CreateSearchUrl dest="3">
-		<RegExp input="$$1" output="&lt;url&gt;http://api.themoviedb.org/2.1/Movie.search/$INFO[language]/xml/57983e31fb435df4df77afb854740ea9/\1&lt;/url&gt;" dest="3">
-			<RegExp input="$$2" output="+\1" dest="4">
-				<expression clear="yes">(.+)</expression>
-			</RegExp>
+		<RegExp input="$$1" output="&lt;url&gt;http://api.themoviedb.org/2.1/Movie.search/$INFO[language]/xml/57983e31fb435df4df77afb854740ea9/\1+$$2&lt;/url&gt;" dest="3">
 			<expression noclean="1"/>
 		</RegExp>
 	</CreateSearchUrl>
