@@ -1,3 +1,6 @@
+[B]1.3.0[/B]
+- added: year to search string
+
 [B]1.2.5[/B]
 - fixed: mpaa is returning string 'Rated' if there is no rating on tmdb
 
